Add attrs to suggest return
